--- a/patterns/builder.html
+++ b/patterns/builder.html
@@ -254,7 +254,7 @@ let f = fb.build();
 <li><a href="https://crates.io/crates/derive_builder">derive_builder</a>, a crate for automatically implementing this pattern while avoiding the boilerplate.</li>
 <li><a href="../idioms/ctor.html">Constructor pattern</a> for when construction is simpler.</li>
 <li><a href="https://en.wikipedia.org/wiki/Builder_pattern">Builder pattern (wikipedia)</a></li>
-<li><a href="https://web.archive.org/web/20210104103000/https://rust-lang.github.io/api-guidelines/type-safety.html#c-builder">Builders enable construction of complex values (C-BUILDER)</a> from the Rust API guidelines</li>
+<li><a href="https://web.archive.org/web/20210104103000/https://rust-lang.github.io/api-guidelines/type-safety.html#c-builder">Construction of complex values</a></li>
 </ul>
 
                     </main>
