--- a/patterns/ffi-export.html
+++ b/patterns/ffi-export.html
@@ -179,7 +179,8 @@
 <h2><a class="header" href="#motivation" id="motivation">Motivation</a></h2>
 <p>Rust has built-in FFI support to other languages.
 It does this by providing a way for crate authors to provide C-compatible APIs through different ABIs (though that is unimportant to this practice).</p>
-<p>Well-designed Rust FFI follows C API design principles, while compromising the design in Rust as little as possible. There are three goals with any foreign API:</p>
+<p>Well-designed Rust FFI follows C API design principles, while compromising the design in Rust as little as possible.
+There are three goals with any foreign API:</p>
 <ol>
 <li>Make it easy to use in the target language.</li>
 <li>Avoid the API dictating internal unsafety on the Rust side as much as possible.</li>
@@ -191,7 +192,8 @@ However, every bit of <code>unsafe</code> code on the Rust side is an opportunit
 But if it is manipulated by unsafe code, it could become full-blown heap corruption.</p>
 <p>The Object-Based API design allows for writing shims that have good memory safety characteristics, and a clean boundary of what is safe and what is <code>unsafe</code>.</p>
 <h2><a class="header" href="#code-example" id="code-example">Code Example</a></h2>
-<p>The POSIX standard defines the API to access an on-file database, known as <a href="https://web.archive.org/web/20210105035602/https://www.mankier.com/0p/ndbm.h">DBM</a>. It is an excellent example of an &quot;object-based&quot; API.</p>
+<p>The POSIX standard defines the API to access an on-file database, known as <a href="https://web.archive.org/web/20210105035602/https://www.mankier.com/0p/ndbm.h">DBM</a>.
+It is an excellent example of an &quot;object-based&quot; API.</p>
 <p>Here is the definition in C, which hopefully should be easy to read for those involved in FFI.
 The commentary below should help explaining it for those who miss the subtleties.</p>
 <pre><code class="language-C">struct DBM;
@@ -212,9 +214,11 @@ int     dbm_store(DBM *, datum, datum, int);
 It is designed to contain internal state, and acts as an entry point for the library's behavior.</p>
 <p>It is completely opaque to the user, who cannot create a <code>DBM</code> themselves since they don't know its size or layout.
 Instead, they must call <code>dbm_open</code>, and that only gives them <em>a pointer to one</em>.</p>
-<p>This means all <code>DBM</code>s are &quot;owned&quot; by the library in a Rust sense. The internal state of unknown size is kept in memory controlled by the library, not the user.
+<p>This means all <code>DBM</code>s are &quot;owned&quot; by the library in a Rust sense.
+The internal state of unknown size is kept in memory controlled by the library, not the user.
 The user can only manage its life cycle with <code>open</code> and <code>close</code>, and perform operations on it with the other functions.</p>
-<p>The <code>datum</code> type was called a &quot;transactional&quot; type above. It is designed to facilitate the exchange of information between the library and its user.</p>
+<p>The <code>datum</code> type was called a &quot;transactional&quot; type above.
+It is designed to facilitate the exchange of information between the library and its user.</p>
 <p>The database is designed to store &quot;unstructured data&quot;, with no pre-defined length or meaning.
 As a result, the <code>datum</code> is the C equivalent of a Rust slice: a bunch of bytes, and a count of how many there are.
 The main difference is that there is no type information, which is what <code>void</code> indicates.</p>
@@ -226,7 +230,8 @@ This has subtle ramifications, due to that pointer inside it.
 The question is, who owns the memory that pointer points to?</p>
 <p>The answer for best memory safety is, &quot;the user&quot;.
 But in cases such as retrieving a value, the user does not know how to allocate it correctly (since they don't know how long the value is).
-In this case, the library code is expected to use the heap that the user has access to -- such as the C library <code>malloc</code> and <code>free</code> -- and then <em>transfer ownership</em> in the Rust sense.</p>
+In this case, the library code is expected to use the heap that the user has access to --
+such as the C library <code>malloc</code> and <code>free</code> -- and then <em>transfer ownership</em> in the Rust sense.</p>
 <p>This may all seem speculative, but this is what a pointer means in C.
 It means the same thing as Rust: &quot;user defined lifetime.&quot;
 The user of the library needs to read the documentation in order to use it correctly.
@@ -310,10 +315,12 @@ A user of the library could use it in a way which causes the iterator to outlive
 </ol>
 <p>The worst part about this bug?
 If the Rust implementation was careful, this code will work most of the time!
-If the memory for the <code>Dbm</code> object is not immediately reused, an internal check will almost certainly fail, resulting in the iterator returning a <code>-1</code> indicating an error.
+If the memory for the <code>Dbm</code> object is not immediately reused, an internal check will almost certainly fail,
+resulting in the iterator returning a <code>-1</code> indicating an error.
 But occasionally, it will cause a segmentation fault, or even worse, nonsensical memory corruption!</p>
 <p>None of this can be avoided by Rust.
-From its perspective, it put those objects on its heap, returned pointers to them, and gave up control of their lifetimes. The C code simply must &quot;play nice&quot;.</p>
+From its perspective, it put those objects on its heap, returned pointers to them, and gave up control of their lifetimes.
+The C code simply must &quot;play nice&quot;.</p>
 <p>The programmer must read and understand the API documentation.
 While some consider that par for the course in C, a good API design can mitigate this risk.
 The POSIX API for <code>DBM</code> did this by <em>consolidating the ownership</em> of the iterator with its parent:</p>
@@ -337,7 +344,8 @@ Many of the easier design points have other patterns associated with them:</p>
 <p><a href="../idioms/ffi-errors.html">FFI Error Passing</a> explains error handling with integer codes and sentinel return values (such as <code>NULL</code> pointers)</p>
 </li>
 <li>
-<p><a href="../idioms/ffi-accepting-strings.html">Accepting Foreign Strings</a> allows accepting strings with minimal unsafe code, and is easier to get right than <a href="../idioms/ffi-passing-strings.html">Passing Strings to FFI</a></p>
+<p><a href="../idioms/ffi-accepting-strings.html">Accepting Foreign Strings</a> allows accepting strings with minimal unsafe code,
+and is easier to get right than <a href="../idioms/ffi-passing-strings.html">Passing Strings to FFI</a></p>
 </li>
 </ul>
 <p>However, not every API can be done this way.
