--- a/additional_resources/design-principles.html
+++ b/additional_resources/design-principles.html
@@ -188,27 +188,45 @@ One should &quot;depend upon abstractions, [not] concretions.&quot;</li>
 <h2><a class="header" href="#a-hrefhttpsenwikipediaorgwikidon27t_repeat_yourselfdry-dont-repeat-yourselfa" id="a-hrefhttpsenwikipediaorgwikidon27t_repeat_yourselfdry-dont-repeat-yourselfa"><a href="https://en.wikipedia.org/wiki/Don%27t_repeat_yourself">DRY (Don’t Repeat Yourself)</a></a></h2>
 <p>&quot;Every piece of knowledge must have a single, unambiguous, authoritative representation within a system&quot;</p>
 <h2><a class="header" href="#a-hrefhttpsenwikipediaorgwikikiss_principlekiss-principlea" id="a-hrefhttpsenwikipediaorgwikikiss_principlekiss-principlea"><a href="https://en.wikipedia.org/wiki/KISS_principle">KISS principle</a></a></h2>
-<p>most systems work best if they are kept simple rather than made complicated; therefore, simplicity should be a key goal in design, and unnecessary complexity should be avoided</p>
+<p>most systems work best if they are kept simple rather than made complicated; therefore,
+simplicity should be a key goal in design, and unnecessary complexity should be avoided</p>
 <h2><a class="header" href="#a-hrefhttpsenwikipediaorgwikilaw_of_demeterlaw-of-demeter-loda" id="a-hrefhttpsenwikipediaorgwikilaw_of_demeterlaw-of-demeter-loda"><a href="https://en.wikipedia.org/wiki/Law_of_Demeter">Law of Demeter (LoD)</a></a></h2>
-<p>a given object should assume as little as possible about the structure or properties of anything else (including its subcomponents), in accordance with the principle of &quot;information hiding&quot;</p>
+<p>a given object should assume as little as possible about the structure or properties of
+anything else (including its subcomponents), in accordance with the principle of &quot;information hiding&quot;</p>
 <h2><a class="header" href="#a-hrefhttpsenwikipediaorgwikidesign_by_contractdesign-by-contract-dbca" id="a-hrefhttpsenwikipediaorgwikidesign_by_contractdesign-by-contract-dbca"><a href="https://en.wikipedia.org/wiki/Design_by_contract">Design by contract (DbC)</a></a></h2>
-<p>software designers should define formal, precise and verifiable interface specifications for software components, which extend the ordinary definition of abstract data types with preconditions, postconditions and invariants</p>
+<p>software designers should define formal, precise and verifiable interface specifications
+for software components, which extend the ordinary definition of abstract data types with
+preconditions, postconditions and invariants</p>
 <h2><a class="header" href="#a-hrefhttpsenwikipediaorgwikiencapsulation_computer_programmingencapsulationa" id="a-hrefhttpsenwikipediaorgwikiencapsulation_computer_programmingencapsulationa"><a href="https://en.wikipedia.org/wiki/Encapsulation_(computer_programming)">Encapsulation</a></a></h2>
-<p>bundling of data with the methods that operate on that data, or the restricting of direct access to some of an object's components. Encapsulation is used to hide the values or state of a structured data object inside a class, preventing unauthorized parties' direct access to them.</p>
+<p>bundling of data with the methods that operate on that data, or the restricting of
+direct access to some of an object's components. Encapsulation is used to hide the
+values or state of a structured data object inside a class, preventing unauthorized
+parties' direct access to them.</p>
 <h2><a class="header" href="#a-hrefhttpsenwikipediaorgwikicommande28093query_separationcommand-query-separationcqsa" id="a-hrefhttpsenwikipediaorgwikicommande28093query_separationcommand-query-separationcqsa"><a href="https://en.wikipedia.org/wiki/Command%E2%80%93query_separation">Command-Query-Separation(CQS)</a></a></h2>
-<p>“Functions should not produce abstract side effects...only commands (procedures) will be permitted to produce side effects.” - Bertrand Meyer: Object Oriented Software Construction</p>
+<p>“Functions should not produce abstract side effects...only commands (procedures) will
+be permitted to produce side effects.” - Bertrand Meyer: Object Oriented Software Construction</p>
 <h2><a class="header" href="#a-hrefhttpsenwikipediaorgwikiprinciple_of_least_astonishmentprinciple-of-least-astonishment-polaa" id="a-hrefhttpsenwikipediaorgwikiprinciple_of_least_astonishmentprinciple-of-least-astonishment-polaa"><a href="https://en.wikipedia.org/wiki/Principle_of_least_astonishment">Principle of least astonishment (POLA)</a></a></h2>
-<p>a component of a system should behave in a way that most users will expect it to behave. The behavior should not astonish or surprise users</p>
+<p>a component of a system should behave in a way that most users will expect it to behave.
+The behavior should not astonish or surprise users</p>
 <h2><a class="header" href="#linguistic-modular-units" id="linguistic-modular-units">Linguistic-Modular-Units</a></h2>
-<p>“Modules must correspond to syntactic units in the language used.” - Bertrand Meyer: Object Oriented Software Construction</p>
+<p>“Modules must correspond to syntactic units in the language used.” - Bertrand Meyer:
+Object Oriented Software Construction</p>
 <h2><a class="header" href="#self-documentation" id="self-documentation">Self-Documentation</a></h2>
-<p>“The designer of a module should strive to make all information about the module part of the module itself.” - Bertrand Meyer: Object Oriented Software Construction</p>
+<p>“The designer of a module should strive to make all information about the module part of
+the module itself.” - Bertrand Meyer: Object Oriented Software Construction</p>
 <h2><a class="header" href="#uniform-access" id="uniform-access">Uniform-Access</a></h2>
-<p>“All services offered by a module should be available through a uniform notation, which does not betray whether they are implemented through storage or through computation.” - Bertrand Meyer: Object Oriented Software Construction</p>
+<p>“All services offered by a module should be available through a uniform notation,
+which does not betray whether they are implemented through storage or through computation.” -
+Bertrand Meyer: Object Oriented Software Construction</p>
 <h2><a class="header" href="#single-choice" id="single-choice">Single-Choice</a></h2>
-<p>“Whenever a software system must support a set of alternatives, one and only one module in the system should know their exhaustive list.” - Bertrand Meyer: Object Oriented Software Construction</p>
+<p>“Whenever a software system must support a set of alternatives, one and only one module
+in the system should know their exhaustive list.” - Bertrand Meyer: Object Oriented
+Software Construction</p>
 <h2><a class="header" href="#persistence-closure" id="persistence-closure">Persistence-Closure</a></h2>
-<p>“Whenever a storage mechanism stores an object, it must store with it the dependents of that object. Whenever a retrieval mechanism retrieves a previously stored object, it must also retrieve any dependent of that object that has not yet been retrieved.” - Bertrand Meyer: Object Oriented Software Construction</p>
+<p>“Whenever a storage mechanism stores an object, it must store with it the dependents
+of that object. Whenever a retrieval mechanism retrieves a previously stored object,
+it must also retrieve any dependent of that object that has not yet been retrieved.” -
+Bertrand Meyer: Object Oriented Software Construction</p>
 
                     </main>
 
