--- a/functional/index.html
+++ b/functional/index.html
@@ -208,7 +208,8 @@ Then we print it out.</p>
 </span>println!(&quot;{}&quot;, (1..11).fold(0, |a, b| a + b));
 <span class="boring">}
 </span></code></pre></pre>
-<p>Whoa! This is really different! What's going on here? Remember that with declarative programs we are describing <strong>what</strong> to do, rather than <strong>how</strong> to do it.
+<p>Whoa! This is really different! What's going on here? Remember that with declarative programs
+we are describing <strong>what</strong> to do, rather than <strong>how</strong> to do it.
 <code>fold</code> is a function that <a href="https://en.wikipedia.org/wiki/Function_composition">composes</a> functions. The name is a convention from Haskell.</p>
 <p>Here, we are composing functions of addition (this closure: <code>|a, b| a + b)</code>) with a range from 1 to 10.
 The <code>0</code> is the starting point, so <code>a</code> is <code>0</code> at first.
