--- a/idioms/ffi-passing-strings.html
+++ b/idioms/ffi-passing-strings.html
@@ -242,9 +242,11 @@ In addition, the documentation explains that &quot;round-tripping&quot; a <code>
     }
 }
 </code></pre>
-<p>This code will result in a dangling pointer, because the lifetime of the <code>CString</code> is not extended by the pointer creation, unlike if a reference were created.</p>
+<p>This code will result in a dangling pointer, because the lifetime of the <code>CString</code> is not extended
+by the pointer creation, unlike if a reference were created.</p>
 <p>Another issue frequently raised is that the initialization of a 1k vector of zeroes is &quot;slow&quot;.
-However, recent versions of Rust actually optimize that particular macro to a call to <code>zmalloc</code>, meaning it is as fast as the operating system's ability to return zeroed memory (which is quite fast).</p>
+However, recent versions of Rust actually optimize that particular macro to a call to <code>zmalloc</code>,
+meaning it is as fast as the operating system's ability to return zeroed memory (which is quite fast).</p>
 <h2><a class="header" href="#disadvantages" id="disadvantages">Disadvantages</a></h2>
 <p>None?</p>
 
