--- a/patterns/index.html
+++ b/patterns/index.html
@@ -168,18 +168,26 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#design-patterns" id="design-patterns">Design Patterns</a></h1>
-<p><a href="https://en.wikipedia.org/wiki/Software_design_pattern">Design patterns</a> are &quot;general reusable solutions to a commonly occurring problem within a given context in software design&quot;.
-Design patterns are a great way to describe some of the culture and 'tribal knowledge' of programming in a language.
-Design patterns are very language-specific - what is a pattern in one language may be unnecessary in another due to a language feature, or impossible to express due to a missing feature.</p>
-<p>If overused, design patterns can add unnecessary complexity to programs. However, they are a great way to share intermediate and advanced level knowledge about a programming language.</p>
+<p><a href="https://en.wikipedia.org/wiki/Software_design_pattern">Design patterns</a> are &quot;general reusable
+solutions to a commonly occurring problem within a given context in software design&quot;.
+Design patterns are a great way to describe some of the culture and 'tribal knowledge'
+of programming in a language.
+Design patterns are very language-specific - what is a pattern in one language may be
+unnecessary in another due to a language feature, or impossible to express due to a missing feature.</p>
+<p>If overused, design patterns can add unnecessary complexity to programs.
+However, they are a great way to share intermediate and advanced level knowledge about a programming language.</p>
 <h2><a class="header" href="#design-patterns-in-rust" id="design-patterns-in-rust">Design patterns in Rust</a></h2>
-<p>Rust has many very unique features. These features give us great benefit by removing whole classes of problems. Some of them are also patterns that are <em>unique</em> to Rust.</p>
+<p>Rust has many very unique features. These features give us great benefit by removing whole classes of problems.
+Some of them are also patterns that are <em>unique</em> to Rust.</p>
 <h2><a class="header" href="#yagni" id="yagni">YAGNI</a></h2>
-<p>If you're not familiar with it, YAGNI is an acronym that stands for <code>You Aren't Going to Need It</code>. It's an important software design principle to apply as you write code.</p>
+<p>If you're not familiar with it, YAGNI is an acronym that stands for <code>You Aren't Going to Need It</code>.
+It's an important software design principle to apply as you write code.</p>
 <blockquote>
 <p>The best code I ever wrote was code I never wrote.</p>
 </blockquote>
-<p>If we apply YAGNI to design patterns, we see that the features of Rust allow us to throw out many patterns. For instance, there is no need for the <a href="https://en.wikipedia.org/wiki/Strategy_pattern">strategy pattern</a> in Rust because we can just use <a href="https://doc.rust-lang.org/book/traits.html">traits</a>.</p>
+<p>If we apply YAGNI to design patterns, we see that the features of Rust allow us to throw out many patterns.
+For instance, there is no need for the <a href="https://en.wikipedia.org/wiki/Strategy_pattern">strategy pattern</a> in Rust
+because we can just use <a href="https://doc.rust-lang.org/book/traits.html">traits</a>.</p>
 <p>TODO: Maybe include some code to illustrate the traits.</p>
 
                     </main>
