deploy: 22e8405b26cf55aa576a5677a4869d2fe7e2a643

--- a/print.html
+++ b/print.html
@@ -257,7 +257,7 @@ We can fix this by simply modifying the type for our argument.</p>
 Curious: true
 </code></pre>
 <p>But wait, that's not all! There is more to this story.
-It's likely that you may say to yourself: that doesn't matter, I will never be using a <code>&amp;'static str</code> as an input anways (as we did when we used <code>&quot;Ferris&quot;</code>).
+It's likely that you may say to yourself: that doesn't matter, I will never be using a <code>&amp;'static str</code> as an input anyways (as we did when we used <code>&quot;Ferris&quot;</code>).
 Even ignoring this special example, you may still find that using <code>&amp;str</code> will give you more flexibility than using a <code>&amp;String</code>.</p>
 <p>Let's now take an example where someone gives us a sentence, and we want to determine if any of the words
 in the sentence has a word that contains three consecutive vowels.
