deploy: ceefb9a2ab82de827f92b0d0d313ad995ed34b9c

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <main>
                         <h1><a class="header" href="#introduction" id="introduction">Introduction</a></h1>
 <h2><a class="header" href="#participation" id="participation">Participation</a></h2>
-<p>If you are interested in contributing to the Patterns catalogue, check out the
+<p>If you are interested in contributing to this book, check out the
 <a href="https://github.com/rust-unofficial/patterns/blob/master/CONTRIBUTING.md">contribution guidelines</a>.</p>
 <h2><a class="header" href="#design-patterns" id="design-patterns">Design patterns</a></h2>
 <p>When developing programs, we have to solve many problems.
