deploy: bfbc505af29f0d331256aab8dbca5f2445a64eec

--- a/print.html
+++ b/print.html
@@ -2659,7 +2659,7 @@ A class should only have a single responsibility, that is, only changes to one p
 specification should be able to affect the specification of the class.</li>
 <li><a href="https://en.wikipedia.org/wiki/Open%E2%80%93closed_principle">Open/Closed Principle (OCP)</a>:
 &quot;Software entities ... should be open for extension, but closed for modification.&quot;</li>
-<li><a href="https://en.wikipedia.org/wiki/Liskov_substitution_principle">Liscov Substitution Principle (LSP)</a>:
+<li><a href="https://en.wikipedia.org/wiki/Liskov_substitution_principle">Liskov Substitution Principle (LSP)</a>:
 &quot;Objects in a program should be replaceable with instances of their subtypes without altering the correctness
 of that program.&quot;</li>
 <li><a href="https://en.wikipedia.org/wiki/Interface_segregation_principle">Interface Segregation Principle (ISP)</a>:
